...
import Foundation
import Combine
import SwiftUI

public class FaceFetcher: ObservableObject {
    @Published var facedata = Face()
    @Published var button : String = "Connect"
    @Published var titlebar : String = "Not connected"
    
    @Published var running : Bool = false
    
    
    let willChange = PassthroughSubject<Void, Never>()
    
...
